* Thu Jan 07 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.4.2
- Removed EL6 support

* Tue Nov 03 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.4.1-0
- Updated/corrected documentation
- Added REFERENCE.md
- Removed the unused libreswan::use_certs parameter
- Converted libreswan::params to module data
- Hooked service notifications at the class levels

* Thu Oct 08 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 3.4.0-0
- Add support for IKEv2 Mobility (RFC-4555) and mobile client connections
- Add additional settings for DNS and Domains for libreswan v3.23+

* Mon Aug 03 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 3.3.0-0
- Add EL8 and firewalld support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.2.1-0
- update the upper bound of simplib for SIMP 6.5 release

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 3.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 3.1.1-0
- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
  Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 3.1.0-0
- Update badges and contribution guide URL in README.md

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 3.1.0-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Fri Jul 06 2018 Trevor Vaughan <tvaughan@onyxpont.com> - 3.1.0-0
- Added Puppet 5 and OEL support

* Fri Jun 15 2018 Nick Miller <nick.miller@onyxpoint.com> - 3.0.3-0
- Remove unneeded fixtures and update CI assets

* Thu Nov 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.2-0
- Bug fixes:
  - Set up FIPS-compliant configuration, not just when
    simp_options::fips is true, but also when the server is already
    in FIPS mode.